fix: experience section minor UI issue on mobile view

--- a/src/Component/CSS/Experience.css
+++ b/src/Component/CSS/Experience.css
@@ -124,5 +124,6 @@
   .experienceDescriptionDiv p > span {
     flex: 1 1;
     text-wrap-mode: nowrap;
+    text-wrap: nowrap;
   }
 }
